[gd_scene load_steps=20 format=3 uid="uid://y1pp0axcp1s0"]

[ext_resource type="Script" uid="uid://cnin7pfpq1hgb" path="res://entities/pikpok/pikpok.gd" id="1_kyvah"]
[ext_resource type="Script" uid="uid://crxmoyjq1vwwu" path="res://common/collect/collector_2d.gd" id="3_kyvah"]
[ext_resource type="AudioStream" uid="uid://ccurxdjxy13u" path="res://entities/money/audio/04 Die 2.mp3" id="3_p77o7"]
[ext_resource type="Script" uid="uid://cinn5yixd7nw6" path="res://common/collect/collectable_2d.gd" id="4_o0vqk"]
[ext_resource type="Texture2D" uid="uid://ut6d4b4sq4en" path="res://entities/pikpok/pik-pok.png" id="4_p77o7"]
[ext_resource type="AudioStream" uid="uid://c8nab6o2y1lfl" path="res://entities/money/audio/03 Die 1.mp3" id="5_hit3b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hpggm"]
atlas = ExtResource("4_p77o7")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_58t7x"]
atlas = ExtResource("4_p77o7")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_22dcl"]
atlas = ExtResource("4_p77o7")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_enqll"]
atlas = ExtResource("4_p77o7")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyvxs"]
atlas = ExtResource("4_p77o7")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l21v4"]
atlas = ExtResource("4_p77o7")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsn73"]
atlas = ExtResource("4_p77o7")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3twfs"]
atlas = ExtResource("4_p77o7")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3pmm"]
atlas = ExtResource("4_p77o7")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nktkk"]
atlas = ExtResource("4_p77o7")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_r3pmm"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_hpggm")
}, {
"duration": 2.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58t7x")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_22dcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enqll")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyvxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l21v4")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsn73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3twfs")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3pmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nktkk")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hit3b"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o0vqk"]
radius = 4.12311

[node name="PikPok" type="Node2D"]
z_index = 1
script = ExtResource("1_kyvah")
audio_stream_death_1 = ExtResource("5_hit3b")
audio_stream_death_2 = ExtResource("3_p77o7")
metadata/_custom_type_script = "uid://cnin7pfpq1hgb"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r3pmm")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hit3b")

[node name="Collectable2D" type="Area2D" parent="."]
script = ExtResource("4_o0vqk")
identifier = "pikpok"
metadata/_custom_type_script = "uid://cinn5yixd7nw6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collectable2D"]
shape = SubResource("CircleShape2D_hit3b")

[node name="Collector2D" type="Area2D" parent="."]
script = ExtResource("3_kyvah")
audio_order = 1
collectable_identifiers = Array[String](["money", "super_money", "police"])
metadata/_custom_type_script = "uid://crxmoyjq1vwwu"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Collector2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collector2D"]
shape = SubResource("CircleShape2D_o0vqk")
